fix(BO) : change deleted link color for readability

--- a/dossierfacile-bo/src/main/resources/static/css/apartment-sharing-view.css
+++ b/dossierfacile-bo/src/main/resources/static/css/apartment-sharing-view.css
@@ -335,10 +335,12 @@
     margin: 0;
     font-size: 16px;
     line-height: 24px;
+    color: #000;
 }
 
 .deleted-links-list li {
     margin-bottom: 0;
+    color: #000;
 }
 
 /* Responsive */
